--- a/src/ui/main_form.ui
+++ b/src/ui/main_form.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>537</width>
+    <width>503</width>
     <height>547</height>
    </rect>
   </property>
@@ -75,7 +75,7 @@
       </size>
      </property>
      <property name="currentIndex">
-      <number>2</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="planned_tab">
       <attribute name="title">
@@ -87,41 +87,14 @@
          <item row="3" column="0">
           <widget class="QPushButton" name="plan_delete_button">
            <property name="text">
-            <string>delete selected</string>
+            <string>Удалить</string>
            </property>
           </widget>
          </item>
          <item row="2" column="0">
           <widget class="QPushButton" name="plan_add_button">
            <property name="text">
-            <string>add anime</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QLabel" name="plan_info">
-           <property name="font">
-            <font>
-             <pointsize>10</pointsize>
-            </font>
-           </property>
-           <property name="frameShape">
-            <enum>QFrame::StyledPanel</enum>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="textFormat">
-            <enum>Qt::AutoText</enum>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-           </property>
-           <property name="wordWrap">
-            <bool>true</bool>
-           </property>
-           <property name="openExternalLinks">
-            <bool>true</bool>
+            <string>Добавить</string>
            </property>
           </widget>
          </item>
@@ -182,6 +155,33 @@
            </property>
           </widget>
          </item>
+         <item row="1" column="1" rowspan="3">
+          <widget class="QLabel" name="plan_info">
+           <property name="font">
+            <font>
+             <pointsize>10</pointsize>
+            </font>
+           </property>
+           <property name="frameShape">
+            <enum>QFrame::StyledPanel</enum>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="textFormat">
+            <enum>Qt::AutoText</enum>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+           </property>
+           <property name="wordWrap">
+            <bool>true</bool>
+           </property>
+           <property name="openExternalLinks">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
       </layout>
@@ -196,14 +196,14 @@
          <item row="4" column="0">
           <widget class="QPushButton" name="watch_delete_button">
            <property name="text">
-            <string>delete selected</string>
+            <string>Удалить</string>
            </property>
           </widget>
          </item>
          <item row="3" column="0">
           <widget class="QPushButton" name="watch_add_button">
            <property name="text">
-            <string>add anime</string>
+            <string>Добавить</string>
            </property>
           </widget>
          </item>
@@ -264,7 +264,14 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="1">
+         <item row="2" column="0">
+          <widget class="QPushButton" name="watch_edit_button">
+           <property name="text">
+            <string>Редактировать</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1" rowspan="4">
           <widget class="QLabel" name="watch_info">
            <property name="font">
             <font>
@@ -288,13 +295,6 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="0">
-          <widget class="QPushButton" name="watch_edit_button">
-           <property name="text">
-            <string>edit </string>
-           </property>
-          </widget>
-         </item>
         </layout>
        </item>
       </layout>
@@ -309,14 +309,14 @@
          <item row="6" column="0">
           <widget class="QPushButton" name="comp_delete_button">
            <property name="text">
-            <string>delete selected</string>
+            <string>Удалить</string>
            </property>
           </widget>
          </item>
          <item row="5" column="0">
           <widget class="QPushButton" name="comp_add_button">
            <property name="text">
-            <string>add anime</string>
+            <string>Добавить</string>
            </property>
           </widget>
          </item>
@@ -410,13 +410,32 @@
      </widget>
     </widget>
    </widget>
+   <widget class="QToolButton" name="toolButton">
+    <property name="geometry">
+     <rect>
+      <x>474</x>
+      <y>11</y>
+      <width>21</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>...</string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="toolButtonStyle">
+     <enum>Qt::ToolButtonIconOnly</enum>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>537</width>
+     <width>503</width>
      <height>21</height>
     </rect>
    </property>
